2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add vasnprintf.
	* basicdefs.h: Replace alloca cruft with alloca.h.
	* bootstrap.sh.in: Update for new gnulib.
	* bootstrap.sh: Update for new gnulib.
	* configure.ac: Move gnulib macros earlier.
	* sed/execute.c: Do not include acl.h when bootstrapping.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* NEWS: Document `z' extension.
	* doc/sed-in.texi: Document `z' extension, and GNU sed's s/.*.//
	behavior with invalid multibyte sequences.
	* sed/compile.c (compile_program): Recognize `z'.
	* sed/execute.c (execute_program): Execute `z'.
	* testsuite/Makefile.am: Add badenc test.
	* testsuite/Makefile.tests: Add badenc test.
	* testsuite/badenc.good: New.
	* testsuite/badenc.inp: New.
	* testsuite/badenc.sed: New.

2008-08-27  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): Close the input file!

2008-08-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Add gl_DISABLE_THREADS.

2008-08-20  Ralf Wildenhues  <ralf.wildenhues@gmx.de

	* doc/sed-in.texi: Drop leading whitespace where appropriate,
	do not use TABs.
	* doc/sed.texi: Regnerate.

2008-08-19  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Do not include strverscmp.c.

2008-07-21  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Remove northpark.edu address for sed FAQ.
	* doc/sed.texi: Regenerate.

2008-07-10  Paolo Bonzini  <bonzini@gnu.org>

        * doc/sed-in.texi: Make the description of ^ and $ more precise.
        * doc/sed.texi: Regenerate.

2008-05-15  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Update for newer gnulib.

2008-05-15  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Define bool, true, false.  Reported by
	Jason Stover.  Adjust for gnulib changes.
	* bootstrap.sh: Regenerate.

2008-04-24  Paul Eggert  <eggert@twinsun.com>
