@@ -18,8 +18,8 @@
 
 # gnulib modules used by this package.
 gnulib_modules="
-    acl alloca extensions getline getopt gettext memchr memcmp memmove \
-    mkstemp obstack pathmax snprintf stdbool stat-macros \
+    acl alloca extensions getline getopt gettext localcharset \
+    memchr memcmp memmove mkstemp obstack pathmax snprintf stdbool stat-macros \
     strerror strverscmp unlocked-io vasnprintf verify"
 
 SKIP_PO=t
