@@ -1,83 +1,4 @@
-absolute-header.m4
-acl.m4
-alloca.m4
-codeset.m4
 config.rpath
-eoverflow.m4
-error.m4
-exitfail.m4
-extensions.m4
-float_h.m4
-getdelim.m4
-getline.m4
-getopt.m4
-gettext.m4
-gettimeofday.m4
-glibc2.m4
-glibc21.m4
-gnulib-common.m4
-gnulib-comp.m4
-gnulib-tool.m4
-iconv.m4
-include_next.m4
-inline.m4
 install-sh
-intdiv0.m4
-intl.m4
-intldir.m4
-intlmacosx.m4
-intmax.m4
-intmax_t.m4
-inttypes-h.m4
-inttypes-pri.m4
-inttypes_h.m4
-lcmessage.m4
-lib-ld.m4
-lib-link.m4
-lib-prefix.m4
 link-warning.h
-localcharset.m4
-lock.m4
-longdouble.m4
-longlong.m4
-malloc.m4
-mbrtowc.m4
-mbstate_t.m4
-memchr.m4
-memcmp.m4
-memmove.m4
-mkstemp.m4
-nls.m4
-pathmax.m4
-po.m4
-printf-posix.m4
-progtest.m4
-quote.m4
-quotearg.m4
-realloc.m4
-signed.m4
-size_max.m4
-snprintf.m4
-stdbool.m4
-stdint.m4
-stdint_h.m4
-stdio_h.m4
-stdlib_h.m4
-strerror.m4
-strverscmp.m4
-sys_stat_h.m4
-sys_time_h.m4
-tempname.m4
 texinfo.tex
-uintmax_t.m4
-ulonglong.m4
-unistd_h.m4
-unlocked-io.m4
-vasnprintf.m4
-visibility.m4
-wchar.m4
-wchar_t.m4
-wctype.m4
-wint_t.m4
-xalloc.m4
-xsize.m4
