@@ -4,6 +4,6 @@ include gnulib.mk
 
 SUFFIXES += .a .o .c .y .l .h .sh .elc .el
 
-AM_CPPFLAGS += -I$(top_srcdir)/lib -I$(top_srcdir)/intl -I$(top_srcdir)/pcre \
-	-I$(top_srcdir)	-I$(top_builddir)/lib -I$(top_builddir)/intl
+AM_CPPFLAGS += -I$(top_srcdir)/lib -I$(top_srcdir)/pcre \
+	-I$(top_srcdir)	-I$(top_builddir)/lib
 
